--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
   margin: 0px;
   color: #333;
   --type-first: Helvetica, Arial, sans-serif;
-  --type-secound: "Spectral", Georgia;
+  --type-second: 'Spectral', Georgia;
   font-family: var(--type-first);
 }
 
@@ -21,11 +21,11 @@ p {
   margin: 0px;
 }
 
-ul, 
+ul,
 li {
   list-style: none;
   padding: 0px;
-  margin: 0;
+  margin: 0px;
 }
 
 img {
@@ -57,7 +57,7 @@ a {
 }
 
 .title {
-  font-family: var(--type-secound);
+  font-family: var(--type-second);
   line-height: 1;
   font-size: 3rem;
   margin: 1rem 0;
@@ -74,14 +74,14 @@ a {
   position: absolute;
   bottom: 5px;
   left: -5px;
-  border-radius: .2rem;
+  border-radius: 0.2rem;
   z-index: -1;
 }
 
 .animeLeft {
   opacity: 0;
   transform: translateX(-20px);
-  animation: animeLeft .3s forwards;
+  animation: animeLeft 0.3s forwards;
 }
 
 @keyframes animeLeft {
@@ -89,4 +89,18 @@ a {
     opacity: 1;
     transform: initial;
   }
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  min-height: calc(100vh + 10rem);
+}
+
+.AppBody {
+  flex: 1;
+}
+
+.VictoryContainer {
+  height: initial !important;
 }
